--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,11 @@
-# OpenAI API Key (required)
+# Environment variables for Support Ticket Triage Agent
+
+# OpenAI Configuration
 OPENAI_API_KEY=your-openai-api-key-here
+MODEL_NAME=gpt-4-turbo-preview
+TEMPERATURE=0.3
+MAX_TOKENS=2000
+
+# API Configuration (optional)
+API_HOST=0.0.0.0
+API_PORT=8000
