feat: Implement semantic knowledge base search with ChromaDB and add new agent tools for context, operational, and routing functions.

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,7 @@ MAX_TOKENS=2000
 # API Configuration (optional)
 API_HOST=0.0.0.0
 API_PORT=8000
+
+# Vector Database (ChromaDB)
+CHROMA_PERSIST_DIR=data/.chroma
+EMBEDDING_MODEL=text-embedding-3-small
