--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ dependencies = [
     "fastapi",
     "uvicorn[standard]",
     "python-dotenv",
+    "chromadb>=0.4.0",
+    "openai>=1.0.0",
 ]
 
 [dependency-groups]
