--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@
 
 # OpenAI Configuration
 OPENAI_API_KEY=your-openai-api-key-here
-MODEL_NAME=gpt-4-turbo-preview
+MODEL_NAME=gpt-4.1
 TEMPERATURE=0.3
 MAX_TOKENS=2000
 
